--- a/package.json
+++ b/package.json
@@ -17,14 +17,26 @@
   },
   "dependencies": {
     "-": "^0.0.1",
+    "@hookform/resolvers": "^3.9.1",
+    "@nextui-org/button": "^2.0.38",
+    "@nextui-org/input": "^2.2.5",
+    "@nextui-org/system": "^2.2.6",
+    "@nextui-org/table": "^2.0.40",
+    "@nextui-org/theme": "^2.2.11",
+    "@prisma/client": "^5.22.0",
     "D": "^1.0.0",
+    "bcrypt": "^5.1.1",
     "eslint-config-prettier": "^9.1.0",
+    "framer-motion": "^11.11.17",
     "next": "^15.0.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.2",
+    "@eslint/js": "^9.15.0",
     "@storybook/addon-essentials": "^8.4.0",
     "@storybook/addon-interactions": "^8.4.0",
     "@storybook/addon-links": "^8.4.0",
@@ -35,23 +47,32 @@
     "@storybook/nextjs": "^8.4.0",
     "@storybook/react": "^8.4.0",
     "@storybook/test": "^8.4.0",
+    "@storybook/test-runner": "^0.19.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.0.1",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^22.8.6",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
-    "eslint": "^9.13.0",
+    "@vitest/coverage-v8": "2.1.5",
+    "eslint": "^9.15.0",
     "eslint-config-next": "14.2.15",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-storybook": "^0.10.1",
+    "globals": "^15.12.0",
     "jsdom": "^25.0.1",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
     "prettier-plugin-organize-imports": "^4.1.0",
     "prettier-plugin-tailwindcss": "^0.6.8",
+    "prisma": "^5.22.0",
+    "resize-observer-polyfill": "^1.5.1",
     "storybook": "^8.4.0",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.6.3",
+    "typescript-eslint": "^8.15.0",
     "vitest": "^2.1.4"
   },
   "packageManager": "yarn@4.5.0"
