--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "-": "^0.0.1",
+    "@auth/prisma-adapter": "^2.7.4",
     "@hookform/resolvers": "^3.9.1",
     "@nextui-org/button": "^2.0.38",
     "@nextui-org/input": "^2.2.5",
@@ -28,7 +29,9 @@
     "bcrypt": "^5.1.1",
     "eslint-config-prettier": "^9.1.0",
     "framer-motion": "^11.11.17",
+    "lucide-react": "^0.460.0",
     "next": "^15.0.0",
+    "next-auth": "^5.0.0-beta.25",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
